@startuml class_kpi
title Classes — Workload and KPI Engine (EVM)

top to bottom direction

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 65
skinparam class {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              11
  FontStyle             plain
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam enum {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              15
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam ArrowColor      #333333
skinparam ArrowThickness  1.4
skinparam ArrowFontColor  #000000
skinparam ArrowFontStyle  plain
skinparam ArrowFontName   Helvetica
skinparam ArrowFontSize   12
skinparam TitleFontName   Helvetica
skinparam TitleFontSize   13
skinparam TitleFontColor  #333333
skinparam noteBorderColor     #AAAAAA
skinparam noteBackgroundColor #FAFAFA
skinparam noteFontName        Helvetica
skinparam noteFontSize        11
hide circle
hide empty methods

class Project {
  - code : String
  - soldWorkloadDays : BigDecimal
}

class User {
  - email : String
}

class Resource {
  - dailyRate : BigDecimal
  - tccRate : BigDecimal
}

class AnnualTcc {
  - year : int
  - dailyRate : BigDecimal
  - tccRate : BigDecimal
}

class WorkloadPlan {
  - period : LocalDate
  - plannedDays : BigDecimal
}

class ActualWorkload {
  - period : LocalDate
  - actualDays : BigDecimal
  - submittedAt : LocalDateTime
  - validatedAt : LocalDateTime
}

class KpiSnapshot {
  - snapshotDate : LocalDate
  - evPct : BigDecimal
  - deliveryPct : BigDecimal
  - driftDays : BigDecimal
  - productionRevenue : BigDecimal
  - unbilledRevenue : BigDecimal
  - eac : BigDecimal
  - margin : BigDecimal
  - highlights : String
}

Resource "0..1" -- "1" User : cost of
Resource "1" *-- "*" AnnualTcc : rate per year
Project "1" *-- "*" WorkloadPlan
WorkloadPlan "*" -- "1" User : for
Project "1" *-- "*" ActualWorkload
ActualWorkload "*" -- "1" User : for
Project "1" *-- "*" KpiSnapshot : monthly reviews
note right of AnnualTcc
  The daily cost uses the TCC rate for the year of the reported period.
end note

note right of KpiSnapshot
  The snapshot freezes the state of the monthly review (EV % entered by the PM).
end note

@enduml
